--- a/index.html
+++ b/index.html
@@ -63,50 +63,57 @@
             <li>Quadratic O(n²): Nested loops like Bubble Sort.</li>
             <li>Exponential O(2ⁿ): Recursive algorithms like the Tower of Hanoi.</li>
         </ul>
-        <p><b>Criteria to Evaluate Solution Effectiveness:</b> Evaluate based on correctness, time complexity, space efficiency.</p>
+        <h3>What criteria do you use to evaluate the effectiveness of a solution?</h3>
+        <p>  Evaluate based on correctness, time complexity, space efficiency.</p>
     </section>
     <section>
-        <h2>3. Takeaways from Different Design Principles</h2>
-        <p>The concepts and techniques discussed here form the foundation of computational thinking and algorithm design. They demonstrate how complex problems can be tackled through systematic approaches and efficiency improvements.</p>
+        <h2>3. Takeaways from Different Design Principles from chapter 2</h2>
+        <p>The concepts and techniques discussed here form the foundation of computational thinking and algorithm design. They demonstrate how complex problems can be tackled through systematic approaches, efficiency improvements.</p>
         <h3>Key Design Principles:</h3>
         <ul>
-            <li><b>Decomposition:</b> Breaking down a large, complex problem into smaller, more manageable sub-problems.</li>
-            <li><b>Pattern Recognition:</b> Identifying recurring patterns or similarities within a problem.</li>
-            <li><b>Abstraction:</b> Simplifying complex systems by focusing on essential features.</li>
-            <li><b>Brave and Cautious Travel:</b> DFS and BFS traversal techniques.</li>
-            <li><b>Pruning:</b> Eliminates unnecessary parts of a problem (e.g., N-Queen's problem).</li>
-            <li><b>Lazy Propagation:</b> Optimizes performance in data structures by deferring updates.</li>
-            <li><b>Sliding Window:</b> Efficient analysis of overlapping subarrays or subsequences.</li>
-            <li><b>Level Order Traversal:</b> Systematically explores tree nodes level by level.</li>
-            <li><b>Hierarchical Data:</b> Organizes information in parent-child relationships.</li>
-            <li><b>Edge Relaxation:</b> Key in shortest-path algorithms.</li>
-            <li><b>Balancing and Rotations:</b> Maintains efficiency in tree-based data structures.</li>
-            <li><b>Kleene Closure:</b> Relates to transitivity in automata and graph theory.</li>
-            <li><b>Pre-Computing:</b> Enhances performance by pre-calculating results.</li>
-            <li><b>Parental Dominance:</b> Ensures hierarchical efficiency in data structures like heaps.</li>
-            <li><b>Prefix and Suffix:</b> Used in pattern matching and string operations.</li>
-            <li><b>Partitioning:</b> Divides problems into smaller sub-problems.</li>
-            <li><b>Bit Manipulations:</b> Optimizes memory and computation through binary operations.</li>
-            <li><b>Memoization:</b> Optimizes recursive algorithms by storing results.</li>
-            <li><b>Invariants:</b> Conditions that remain constant during execution.</li>
-            <li><b>Shortest Path Trees:</b> Foundational in navigation, routing, and network optimization.</li>
+            <li><b>Decomposition:</b> Decomposition is the process of breaking down a large, complex problem into smaller, more manageable sub-problems. </li>
+            <h2>Reflect on how breaking down a problem into smaller components can help you approach it more effectively.</h2>
+            <p>Breaking down a problem into smaller components simplifies complexity making the overall problem easier to solve efficiently.</p>
+            <li><b>Pattern Recognition:</b> Pattern recognition involves identifying recurring patterns or similarities within a problem, enabling generalizations and predictions.</li>
+            <li><b>Abstraction:</b> Abstraction simplifies complex systems by focusing on essential features and ignoring irrelevant details.  </li>
+            <li><b>Brave and Cautious Travel:</b> Brave traversal involves moving until a dead end and backtracking step by step as in Depth First Search (DFS). Cautious traversal progresses level by level, as in Breadth First Search (BFS).  </li>
+            <li><b>Pruning:</b>Pruning eliminates unnecessary parts of a problem to improve efficiency, it prevents exploration of irrelevant paths, such as in the N-Queen’s problem, saving time and space.</li>
+            <li><b>Lazy Propagation:</b> Lazy propagation optimizes performance in data structures like segment trees by deferring updates until necessary. This technique improves efficiency for large datasets, enabling logarithmic time complexity for updates.</li>
+            <li><b>Sliding Window:</b> The sliding window technique analysis overlapping sub-arrays or sub-sequences by maintaining relevant information from previous windows. It is effective for problems like finding maximum sums or substring searches </li>
+            <li><b>Level Order Traversal:</b> Level order traversal systematically explores tree nodes level by level. It processes nodes breadth-wise and is directly related to BFS traversal in graphs.</li>
+            <li><b>Hierarchical Data:</b> Hierarchical data structures, like family trees, organize information in parent-child relationships.  </li>
+            <li><b>Edge Relaxation:</b> Edge relaxation is a key concept in shortest-path algorithms. It updates the shortest known distance to a vertex by checking paths through neighbouring vertices </li>
+            <li><b>Balancing and Rotations:</b> Balancing and rotations maintain efficiency in tree-based data structures by preventing skewed trees. These techniques are essential for optimal performance in AVL and Red-Black trees.</li>
+            <li><b>Kleene Closure:</b> Kleene closure relates to transitivity in automata and graph theory. It determines relationships between graph elements and computes transitive closure, aiding in shortest path algorithms and social network analysis.</li>
+            <li><b>Pre-Computing:</b> Pre-computing enhances performance by calculating and storing frequently used results in advance. It reduces runtime calculations, particularly in lookup tables and dynamic programming.</li>
+            <li><b>Parental Dominance:</b> Parental dominance ensures hierarchical efficiency in data structures like heaps, where the root contains the largest or smallest element. It is crucial for operations like priority queuing and sorting.</li>
+            <li><b>Prefix and Suffix:</b> Prefixes and suffixes aid in pattern matching and string operations. They are vital for tasks like searching, bioinformatics, and natural language processing.</li>
+            <li><b>Partitioning:</b> Partitioning divides problems into smaller sub-problems for recursive solving, enhancing efficiency. It is widely applied in sorting, searching, and graph algorithms.</li>
+            <li><b>Bit Manipulations:</b> Bit manipulations optimize memory and computation through operations like AND, OR, XOR, and shifting. Techniques like Fenwick trees demonstrate their utility in creating efficient data structures.</li>
+            <li><b>Memoization:</b> Memoization optimizes recursive algorithms by storing previously computed results. It is a core concept in dynamic programming, preventing redundant calculations and reducing time complexity.</li>
+            <li><b>Invariants:</b>Invariants are conditions that remain constant during program execution. They are essential for debugging, testing, and ensuring algorithm correctness, such as maintaining sorted order in sorting algorithms.</li>
+            <li><b>Shortest Path Trees:</b> Shortest path trees illustrate the shortest routes from a starting node to all others. These are foundational in navigation, routing, and network optimization.</li>
+             <h2>How do you determine the most efficient approach when solving a complex problem?</h2>
+            <p>Analyse the problem, evaluate constraints, choose suitable data structures and algorithms, and optimize for time and space complexity based on the requirements.</p>
         </ul>
     </section>
     <section>
-        <h2>4. Hierarchical Data and Tree Structures</h2>
-        <p><b>Trees:</b> Hierarchical data organization, base for upcoming optimizations.</p>
+        <h2>4.The hierarchical data and how different tree data structures solve and optimize over the problem scenarios  </h2>
+        <p><b>Trees:</b> Trees are used for hierarchial data organization. It also gives efficient traversals for structured data. This is base structure for the upcoming optimisations in trees. Here the traversals can be costly in unbalanced conditions hence we optimise to Binary search trees.</p>
         <ul>
-            <li><b>Binary Search Tree:</b> Efficient searching, insertion, deletion.</li>
-            <li><b>AVL Trees:</b> Self-balancing BST with single/double rotations.</li>
-            <li><b>2-3 Trees:</b> Ensures balanced height; efficient searching.</li>
-            <li><b>Red-Black Trees:</b> Color-based balanced BST.</li>
-            <li><b>Heap:</b> Priority queue implementation, used in graph algorithms.</li>
-            <li><b>Trie:</b> Efficient prefix-based data storage.</li>
+            <li><b>Binary Search Tree:</b> It facilitates the searching, insertion and deletion operations. Here it follows the property left child<= parent<= right.This can become unbalanced, leading to worst case O(n). Hence we move to AVL trees.  </li>
+            <li><b>AVL Trees:</b> It is  a Binary search tree which self-balances itself based on the balance factor. Its mainly done using single or double rotations generally after the insertions or deletions. But this frequent rotations increases the stack overhead, hence to optimise we move to 2-3 trees.</li>
+            <li><b>2-3 Trees:</b>A type of BST having 2 children or no children. It ensures all leaves are at the same level. It supports efficient searching, insertion and deletion.</li>
+            <li><b>Red-Black Trees:</b> A type of BST which follows colour based rules. It ensures no two red nodes are adjacent and maintains approximately balanced height and maintains O(log n) .</li>
+            <li><b>Heap:</b> Uses priority queue implementation and is used in graph algorithms like Dijkstra’s and Kruskal’s but it limits itself for priority based operations and rebalancing it during insertion and deletion is time consuming.</li>
+            <li><b>Trie:</b> It is a prefix tree used for storing strings efficiently. Each path from the root represents a unique string. This has its application in dictionary, passwords, autocomplete etc</li>
         </ul>
     </section>
     <section>
-        <h2>5. Array Query Algorithms and Implications</h2>
-        <p>Efficient for solving problems involving queries and data updates.</p>
+        <h2>5. 5.	The need of array query algorithms and their implications. Their applications and principles</h2>
+        <p>Array query algorithms are needed for efficiently solving problems that involves queries and updating the data stored in arrays.
+It is efficient in data updation, handling of dynamic data.
+</p>
         <ul>
             <li>Applications: Range queries, dynamic updates, pattern matching.</li>
             <li>Principles: Pre-computation, divide and conquer, sliding window, lazy propagation.</li>
