--- a/index.html
+++ b/index.html
@@ -110,19 +110,31 @@
         </ul>
     </section>
     <section>
-        <h2>5. 5.	The need of array query algorithms and their implications. Their applications and principles</h2>
+        <h2>5. The need of array query algorithms and their implications. Their applications and principles</h2>
         <p>Array query algorithms are needed for efficiently solving problems that involves queries and updating the data stored in arrays.
 It is efficient in data updation, handling of dynamic data.
 </p>
         <ul>
-            <li>Applications: Range queries, dynamic updates, pattern matching.</li>
-            <li>Principles: Pre-computation, divide and conquer, sliding window, lazy propagation.</li>
+            <h2>Applications:</h2>
+            <li><b>1.Range query:</b>Sum, max, min in a sub array can be calculated efficiently</li> 
+            <li><b>2.Dynamic updates:</b>Incrementing values in a range or updating specific elements.</li>
+            <li>3.Also it matches the sequence using patterns and it is also used in Graph algorithms for example to find shortest path in Dijkstra</li>
+            <l>It follows the design principles of </l>
+            <l>•Pre-computation: computes and store results of queried data in advance</l>
+            <l>•Divide and conquer: Break the array into smaller subarrays to solve queries</l>
+            <l>•Sliding Window: maintains window of useful data while traversing the array</l>
+            <l>•Dynamic programming: uses previous solutions to compute subproblems.</l>
+            <l>•Lazy propagation: Delays updates until necessary</l>
+            <l>It gives improved performance, optimised resource utilization, wide applicability and scalability.</l>
         </ul>
     </section>
     <section>
-        <h2>6. Tree vs. Graph and Traversals</h2>
+        <h2>6.Differentiate between tree and graphs and their traversals. The applications of each</h2>
         <ul>
-            <li><b>Tree:</b> Hierarchical, no cycles, unique path between nodes.</li>
+            <h2>Tree</h2>
+            <l>Tree is a hierarchical data structure with nodes connected by edge
+and no cycles. It always has a single root node and each child has exactly one parent.
+</l>
             <li><b>Graph:</b> General structure, cycles possible, multiple paths between nodes.</li>
         </ul>
         <p>Applications: Trees in BST, heaps; Graphs in networks, social graphs.</p>
