--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ It is efficient in data updation, handling of dynamic data.
         </ul>
     </section>
     <section>
-        <h>6.Differentiate between tree and graphs and their traversals. The applications of each</h>
+        <h2>6.Differentiate between tree and graphs and their traversals. The applications of each</h2>
         <ul>
             <h2>Tree</h2>
             <li>Tree is a hierarchical data structure with nodes connected by edgeand no cycles. It always has a single root node and each child has exactly one parent.</li>
@@ -146,7 +146,7 @@ It is efficient in data updation, handling of dynamic data.
         
     </section>
     <section>
-        <h>7. Deliberate on sorting and searching algorithms, the technique behind each and they connect to real worlds</h>
+        <h2>7. Deliberate on sorting and searching algorithms, the technique behind each and they connect to real worlds</h2>
         <h2>Sorting Techniques:</h2>
         <ul>
             <li><b>1.Bubble Sort:</b>Simple but inefficient (O(n²)), used for small datasets.</li>
