--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3>Iteration</h3>
         <p>Ecosystem Cycles, Population Dynamics, Nature patterns</p>
         <h3>Recursion</h3>
-        <p>Mountains, river networks, and exhibit self-similarity, Fibonacci Sequence, Cell Division</p>
+        <p>Mountains, river networks, and exhibit self-similarity, Cell Division</p>
         <h3>Backtracking</h3>
         <p>Backtracking is used to solve puzzles like Sudoku, crosswords, and word searches, Maze Solving, etc.</p>
     </section>
@@ -51,20 +51,20 @@
         <h2>2. Space and Time Complexity</h2>
         <h3>Space Complexity</h3>
         <p>Measures the memory required by an algorithm.</p>
-        <p><b>Importance:</b> Optimize computational resources (memory and time).</p>
+        <p><b>Importance:</b> Optimize memory and time.</p>
         <h3>Time Complexity</h3>
         <p>Measures how execution time grows with input size.</p>
         <p><b>Importance:</b> Ensure scalability for large inputs in real-world applications.</p>
         <h3>Orders of Growth:</h3>
         <ul>
-            <li>Constant O(1): Accessing array elements.</li>
-            <li>Logarithmic O(log n): Binary search.</li>
-            <li>Linear O(n): Single-pass algorithms.</li>
-            <li>Quadratic O(n²): Nested loops like Bubble Sort.</li>
-            <li>Exponential O(2ⁿ): Recursive algorithms like the Tower of Hanoi.</li>
+            <li>Constant O(1): example:Accessing array elements.</li>
+            <li>Logarithmic O(log n): example:Binary search.</li>
+            <li>Linear O(n): example:Single-pass algorithms.</li>
+            <li>Quadratic O(n²): example:Nested loops like Bubble Sort.</li>
+            <li>Exponential O(2ⁿ): example:Recursive algorithms like the Tower of Hanoi.</li>
         </ul>
         <h3>What criteria do you use to evaluate the effectiveness of a solution?</h3>
-        <p>  Evaluate based on correctness, time complexity, space efficiency.</p>
+        <p>  Evaluate for this are based on time complexity, space efficiency.</p>
     </section>
     <section>
         <h2>3. Takeaways from Different Design Principles from chapter 2</h2>
@@ -74,7 +74,7 @@
             <li><b>Decomposition:</b> Decomposition is the process of breaking down a large, complex problem into smaller, more manageable sub-problems. </li>
             <h2>Reflect on how breaking down a problem into smaller components can help you approach it more effectively.</h2>
             <p>Breaking down a problem into smaller components simplifies complexity making the overall problem easier to solve efficiently.</p>
-            <li><b>Pattern Recognition:</b> Pattern recognition involves identifying recurring patterns or similarities within a problem, enabling generalizations and predictions.</li>
+            <li><b>Pattern Recognition:</b> <li></li>Pattern recognition involves identifying recurring patterns or similarities within a problem, enabling generalizations and predictions.</li></li>
             <li><b>Abstraction:</b> Abstraction simplifies complex systems by focusing on essential features and ignoring irrelevant details.  </li>
             <li><b>Brave and Cautious Travel:</b> Brave traversal involves moving until a dead end and backtracking step by step as in Depth First Search (DFS). Cautious traversal progresses level by level, as in Breadth First Search (BFS).  </li>
             <li><b>Pruning:</b>Pruning eliminates unnecessary parts of a problem to improve efficiency, it prevents exploration of irrelevant paths, such as in the N-Queen’s problem, saving time and space.</li>
