--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li><b>Decomposition:</b> Decomposition is the process of breaking down a large, complex problem into smaller, more manageable sub-problems. </li>
             <h2>Reflect on how breaking down a problem into smaller components can help you approach it more effectively.</h2>
             <p>Breaking down a problem into smaller components simplifies complexity making the overall problem easier to solve efficiently.</p>
-            <li><b>Pattern Recognition:</b> <li></li>Pattern recognition involves identifying recurring patterns or similarities within a problem, enabling generalizations and predictions.</li></li>
+            <li><b>Pattern Recognition:</b> <li>Pattern recognition involves identifying recurring patterns or similarities within a problem, enabling generalizations and predictions.</li></li>
             <li><b>Abstraction:</b> Abstraction simplifies complex systems by focusing on essential features and ignoring irrelevant details.  </li>
             <li><b>Brave and Cautious Travel:</b> Brave traversal involves moving until a dead end and backtracking step by step as in Depth First Search (DFS). Cautious traversal progresses level by level, as in Breadth First Search (BFS).  </li>
             <li><b>Pruning:</b>Pruning eliminates unnecessary parts of a problem to improve efficiency, it prevents exploration of irrelevant paths, such as in the N-Queen’s problem, saving time and space.</li>
