--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <h2>3. Takeaways from Different Design Principles from chapter 2</h2>
         <p>The concepts and techniques discussed here form the foundation of computational thinking and algorithm design. They demonstrate how complex problems can be tackled through systematic approaches, efficiency improvements.</p>
         <h3>Key Design Principles:</h3>
-        <ul>
+         
             <li><b>Decomposition:</b> Decomposition is the process of breaking down a large, complex problem into smaller, more manageable sub-problems. </li>
             <h2>Reflect on how breaking down a problem into smaller components can help you approach it more effectively.</h2>
             <p>Breaking down a problem into smaller components simplifies complexity making the overall problem easier to solve efficiently.</p>
-            <li><b>Pattern Recognition:</b> <li>Pattern recognition involves identifying recurring patterns or similarities within a problem, enabling generalizations and predictions.</li></li>
+            <li><b>Pattern Recognition:</b>Pattern recognition involves identifying recurring patterns or similarities within a problem, enabling generalizations and predictions.</li></li>
             <li><b>Abstraction:</b> Abstraction simplifies complex systems by focusing on essential features and ignoring irrelevant details.  </li>
             <li><b>Brave and Cautious Travel:</b> Brave traversal involves moving until a dead end and backtracking step by step as in Depth First Search (DFS). Cautious traversal progresses level by level, as in Breadth First Search (BFS).  </li>
             <li><b>Pruning:</b>Pruning eliminates unnecessary parts of a problem to improve efficiency, it prevents exploration of irrelevant paths, such as in the N-Queen’s problem, saving time and space.</li>
@@ -95,7 +95,7 @@
             <li><b>Shortest Path Trees:</b> Shortest path trees illustrate the shortest routes from a starting node to all others. These are foundational in navigation, routing, and network optimization.</li>
              <h2>How do you determine the most efficient approach when solving a complex problem?</h2>
             <p>Analyse the problem, evaluate constraints, choose suitable data structures and algorithms, and optimize for time and space complexity based on the requirements.</p>
-        </ul>
+         
     </section>
     <section>
         <h2>4.The hierarchical data and how different tree data structures solve and optimize over the problem scenarios  </h2>
